# nucleon-momentum-distribution

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  cdbonnDistrMacro.cxx  config.sh  drawMacro.cxx  main.cpp  parisDistrMacro.cxx
data/: mom_distr_nucleon_3he_converted.txt  mom_distr_nucleon_3he_nogga_converted.txt  mom_distr_resonance_3he_e33_converted.txt  mom_distr_resonance_3he_e53_converted.txt  mom_distr_resonance_3he_e74_converted.txt
deuteron/: CMakeLists.txt
deuteron/include/: fermi_distribution.h  momentum_distribution.h  plot_generator.h
deuteron/src/: fermi_distribution.cpp  main.cpp  momentum_distribution.cpp  plot_generator.cpp
fermi_potential_deuteron/: CMakeLists.txt  models_config.json
fermi_potential_deuteron/include/: fermi_distribution.h  fermi_distribution_calculator.h
fermi_potential_deuteron/src/: fermi_distribution.cpp  fermi_distribution_calculator.cpp  main.cpp  models_config.json
helium/: CMakeLists.txt
helium/data/: convert.cpp  mom_distr_nucleon_3he_converted.txt  mom_distr_nucleon_3he_nogga_converted.txt  mom_distr_resonance_3he_e33_converted.txt  mom_distr_resonance_3he_e53.txt  mom_distr_resonance_3he_e53_converted.txt  mom_distr_resonance_3he_e74_converted.txt
helium/include/: GraphGenerator.h  MomentumDataLoader.h  momentum_data_loader.h  plot_generator.h
helium/src/: GraphGenerator.cpp  MomentumDataLoader.cpp  main.cpp  momentum_data_loader.cpp  plot_generator.cpp
html/: CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  README_8md.html  annotated.html  classMomentumDataLoader-members.html  classMomentumDataLoader.html  classMomentumDistributionCalculator-members.html  classMomentumDistributionCalculator.html  classPlotGeneratorDeuteron-members.html  classPlotGeneratorDeuteron.html  classPlotGeneratorHelium-members.html  classPlotGeneratorHelium.html  classbasic__json-members.html  classbasic__json.html  classbyte__container__with__subtype-members.html  classbyte__container__with__subtype.html  classdetail_1_1binary__reader-members.html  classdetail_1_1binary__reader.html  classdetail_1_1binary__writer-members.html  classdetail_1_1binary__writer.html  classdetail_1_1exception-members.html  classdetail_1_1exception.html  classdetail_1_1file__input__adapter-members.html  classdetail_1_1file__input__adapter.html  classdetail_1_1input__stream__adapter-members.html  classdetail_1_1input__stream__adapter.html  classdetail_1_1invalid__iterator-members.html  classdetail_1_1invalid__iterator.html  classdetail_1_1iter__impl-members.html  classdetail_1_1iter__impl.html  classdetail_1_1iteration__proxy-members.html  classdetail_1_1iteration__proxy.html  classdetail_1_1iteration__proxy__value-members.html  classdetail_1_1iteration__proxy__value.html  classdetail_1_1iterator__input__adapter-members.html  classdetail_1_1iterator__input__adapter.html  classdetail_1_1json__ref-members.html  classdetail_1_1json__ref.html  classdetail_1_1json__reverse__iterator-members.html  classdetail_1_1json__reverse__iterator.html  (+371 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_b.js  classes_e.js  defines_6.js  defines_7.js  enumvalues_1.js  enumvalues_10.js  enumvalues_2.js  enumvalues_6.js  enumvalues_9.js  enumvalues_f.js  files_0.js  files_2.js  files_3.js  (+69 more)
include/deuteron/: momentum_distribution.h  plot_generator_deuteron.h
include/helium/: momentum_data_loader.h  (+1 more)
input/: mom_distr_nucleon_3he.txt  mom_distr_nucleon_3he_nogga.txt  mom_distr_resonance_3he_e74.txt
latex/: CMakeCXXCompilerId_8cpp.tex  CMakeCXXCompilerId_8cpp_source.tex  annotated.tex  classMomentumDataLoader.tex  classMomentumDistributionCalculator.tex  classPlotGeneratorDeuteron.tex  classPlotGeneratorHelium.tex  classbasic__json.tex  classbyte__container__with__subtype.tex  classdetail_1_1binary__reader.tex  classdetail_1_1binary__writer.tex  classdetail_1_1exception.tex  classdetail_1_1file__input__adapter.tex  classdetail_1_1input__stream__adapter.tex  classdetail_1_1invalid__iterator.tex  classdetail_1_1iter__impl.tex  classdetail_1_1iteration__proxy.tex  classdetail_1_1iteration__proxy__value.tex  classdetail_1_1iterator__input__adapter.tex  classdetail_1_1json__ref.tex  classdetail_1_1json__reverse__iterator.tex  classdetail_1_1json__sax__acceptor.tex  classdetail_1_1json__sax__dom__callback__parser.tex  classdetail_1_1json__sax__dom__parser.tex  classdetail_1_1lexer.tex  classdetail_1_1lexer__base.tex  classdetail_1_1other__error.tex  classdetail_1_1out__of__range.tex  classdetail_1_1output__adapter.tex  classdetail_1_1output__stream__adapter.tex  classdetail_1_1output__string__adapter.tex  classdetail_1_1output__vector__adapter.tex  classdetail_1_1parse__error.tex  classdetail_1_1parser.tex  classdetail_1_1primitive__iterator__t.tex  classdetail_1_1serializer.tex  classdetail_1_1span__input__adapter.tex  classdetail_1_1type__error.tex  classdetail_1_1wide__string__input__adapter.tex  classjson__pointer.tex  (+175 more)
(+4 files in other folders)
